tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/trailing-us-bin.stderr
TOML parse error at line 1, column 23
  |
1 | trailing-us-bin = 0b1_
  |                       ^
invalid binary integer
expected digit
